--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>org.geotools</groupId>
   <artifactId>pairs-hbase-plugin</artifactId>
-  <version>find</version>
+  <version>0.9.0</version>
   <packaging>jar</packaging>
 
   <name>pairs-hbase-raster</name>
