--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,6 +51,13 @@
         },
         {
             "type": "java",
+            "name": "JPDA test-pairs-dev01 (8000)",
+            "request": "attach",
+            "hostName": "test-pairs-dev01.watson.ibm.com",
+            "port": 8000
+        },
+        {
+            "type": "java",
             "name": "JPDA Debug local (8000)",
             "request": "attach",
             "hostName": "localhost",
