--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+<?xml version="1.0" encoding="UTF-8" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                                http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
-    <geotools.version>20.0</geotools.version>
+    <geoserver.version>2.16.0</geoserver.version>
+    <!-- Version used with Geoserver 2.14.0 With geoserver 2.16.0 some classes refactored from e.g. geotools.factory to geotools.util.factory
+      <geotools.version>20.0</geotools.version>
+    -->
+    <geotools.version>22.0</geotools.version>
     <imageio.ext.version>1.1.25</imageio.ext.version>
     <jaiext.version>1.1.1</jaiext.version>
   </properties>
 
   <groupId>org.geotools</groupId>
   <artifactId>pairs-geoserver-extension</artifactId>
-  <version>0.21.0</version>
+  <version>0.21.1</version>
   <packaging>jar</packaging>
 
   <name>pairs-geoserver-extension</name>
@@ -56,8 +59,7 @@
     </developer>
   </developers>
 
-  <contributors>
-  </contributors>
+  <contributors></contributors>
 
   <build>
     <plugins>
@@ -127,7 +129,7 @@
           <groupId>*</groupId>
           <artifactId>*</artifactId>
         </exclusion>
-    </exclusions>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -196,7 +198,7 @@
       <version>4.0.0</version>
       <scope>provided</scope>
     </dependency>
-<!--      <dependency>
+    <!--      <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
           <version>2.9.5</version>
@@ -210,7 +212,7 @@
     </dependency>
     <!-- Basic javax & media dependencies formerly linked in parent -->
     <!-- Java Advanced Imaging (JAI) -->
-<!--    <dependency>
+    <!--    <dependency>
       <groupId>javax.media</groupId>
       <artifactId>jai_core</artifactId>
       <version>1.1.3</version>
@@ -234,7 +236,7 @@
     <dependency>
       <groupId>org.geoserver</groupId>
       <artifactId>gs-wms</artifactId>
-      <version>2.14.0</version>
+      <version>${geoserver.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
