--- a/etc/pairsGeoserverExtensionConfig.json
+++ b/etc/pairsGeoserverExtensionConfig.json
@@ -1,3 +1,3 @@
 {
-  "pairsDataServiceBaseRasterUrl" : "http://localhost:9084/api/v1/dataquery/raster"
+  "pairsDataServiceBaseUrl" : "http://localhost:9084/api/v1/dataquery/"
 }
