--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <!-- <geoserver.version>2.15-SNAPSHOT</geoserver.version> -->
         <geoserver.version>2.16.2</geoserver.version>
-        <!-- <geoserver.version>2.14-SNAPSHOT</geoserver.version> -->
+        <branch.name>-dim01</branch.name>
     </properties>
 
     <groupId>com.ibm.pa.pairs</groupId>
@@ -41,7 +40,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
+                    <finalName>${project.artifactId}-${project.version}${branch.name}</finalName>
                 </configuration>
             </plugin>
         </plugins>
@@ -119,10 +118,11 @@
             <url>https://repo.osgeo.org/repository/release/</url>
             <snapshots>
                 <enabled>false</enabled>
+                <updatePolicy>daily</updatePolicy>
             </snapshots>
             <releases>
                 <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
+                <!-- <updatePolicy>never</updatePolicy> -->
             </releases>
         </repository>
     </repositories>
