--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <geoserver.version>2.16.2</geoserver.version>
-        <branch.name>-dim01</branch.name>
+        <branch.name></branch.name>
     </properties>
 
     <groupId>com.ibm.pa.pairs</groupId>
     <artifactId>pairs-geoserver-extension</artifactId>
-    <version>0.27.0</version>
+    <version>0.28.0</version>
     <packaging>jar</packaging>
 
     <name>pairs-geoserver-extension</name>
