--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch CoverageStoreTest",
+            "request": "launch",
+            "mainClass": "com.ibm.pa.pairs.geoserver.plugin.coveragestore.CoverageStoreTest",
+            "projectName": "pairs-geoserver-extension"
+        },
+        {
+            "type": "java",
+            "name": "Launch PairsDataStoreTest",
+            "request": "launch",
+            "mainClass": "com.ibm.pa.pairs.geoserver.plugin.datastore.PairsDataStoreTest",
+            "projectName": "pairs-geoserver-extension"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - PairsUtilities",
             "request": "launch",
             "mainClass": "com.ibm.pa.pairs.geoserver.plugin.hbase.PairsUtilities",
