--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
         <java.version>1.8</java.version>
         <geoserver.version>2.16.2</geoserver.version>
         <jackson2.version>2.11.1</jackson2.version>
-        <branch.name></branch.name>
+        <branch.name>-dev01</branch.name>
     </properties>
 
     <groupId>com.ibm.pa.pairs</groupId>
     <artifactId>pairs-geoserver-extension</artifactId>
-    <version>0.36.1</version>
+    <version>0.36.0</version>
     <packaging>jar</packaging>
 
     <name>pairs-geoserver-extension</name>
