--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <branch.name></branch.name>
     </properties>
 
-    <groupId>com.ibm.pa.pairs</groupId>
+    <groupId>com.ibm.pairs</groupId>
     <artifactId>pairs-geoserver-extension</artifactId>
     <version>0.38.0</version>
     <packaging>jar</packaging>
