--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <geoserver.version>2.16.2</geoserver.version>
+        <geoserver.version>2.18.2</geoserver.version>
         <jackson2.version>2.11.1</jackson2.version>
-        <branch.name></branch.name>
+        <branch.name>-wcs01</branch.name>
     </properties>
 
     <groupId>com.ibm.pairs</groupId>
