--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch PairsHttpRequestParamMap",
+            "request": "launch",
+            "mainClass": "com.ibm.pa.utils.PairsHttpRequestParamMap",
+            "projectName": "pairs-geoserver-extension"
+        },
+        {
+            "type": "java",
             "name": "Launch CoverageStoreTest",
             "request": "launch",
             "mainClass": "com.ibm.pa.pairs.geoserver.plugin.coveragestore.CoverageStoreTest",
