--- a/etc/pairsGeoserverExtensionConfig.json
+++ b/etc/pairsGeoserverExtensionConfig.json
@@ -1,3 +1,3 @@
 {
-  "pairsDataServiceBaseUrl" : "http://localhost:9084/api/v1/dataquery/"
+  "pairsDataServiceBaseUrl" : "http://localhost:9084/pairsdataservice/v2/"
 }
