--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
         <java.version>1.8</java.version>
         <geoserver.version>2.19.0</geoserver.version>
         <jackson2.version>2.11.1</jackson2.version>
-        <branch.name>-qapi</branch.name>
+        <pairs.extension.branch>2.19.x</pairs.extension.branch>
+        <pairs.extension.minor>0</pairs.extension.minor>
+        <pairs.extension.tag>${geoserver.version}-${pairs.extension.minor}</pairs.extension.tag>
     </properties>
 
     <groupId>com.ibm.pairs</groupId>
@@ -26,6 +28,7 @@
     </organization>
 
     <build>
+        <finalName>${project.artifactId}-${pairs.extension.tag}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -41,7 +44,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
-                    <finalName>${project.artifactId}-${project.version}${branch.name}</finalName>
+                    <finalName>${project.artifactId}-${pairs.extension.tag}</finalName>
                 </configuration>
             </plugin>
             <plugin>
